@@ -1,3 +1,7 @@
+2008-06-19  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp.eclass (NEED_EMACS): Support major/minor version.
+
 2008-05-25  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp.eclass (SIMPLE_ELISP): Remove variable.
